2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_zebra.c (ripng_redistribute_unset, ripng_redistribute_clean):
	  Change 2nd arg to zebra_redistribute_send from zclient->sock
	  to zclient.

2005-04-08 Hasso Tepper <hasso at quagga.net>

	* ripngd.[hc], ripng_interface.c, ripng_peer.c: inet6_ntoa() takes
	  argument now by value.

2005-04-05 Hasso Tepper <hasso at quagga.net>

	* ripngd.[hc]: Remove inet6_ntop() and any usage of it. inet6_ntoa()
	  from lib is used now.
	* ripng_interface.c: inet6_ntop() -> inet6_ntoa().
	* ripng_peer.c: inet6_ntop() -> inet6_ntoa().

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_interface.c: (ripng_interface_delete) After deleting, set
	  ifp->ifindex to IFINDEX_INTERNAL.

2005-01-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_interface.c: (ripng_multicast_join) Save errno before calling
	  ripngd_privs.change.

2005-01-04 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripngd.c: (ripng_recv_packet) Use ZCMSG_FIRSTHDR instead of
	  CMSG_FIRSTHDR.

2004-12-16 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_nexthop.c: Replace NEXTHOP_OUT macro with NEXTHOP_OUT_PTR,
	  since it's not really OK to take the address of a ternary expression.
	  (_ripng_rte_cmp,ripng_rte_send) Use new NEXTHOP_OUT_PTR macro
	  instead of NEXTHOP_OUT.

2004-12-08 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* *.c: Change level of debug messages to LOG_DEBUG.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_main.c: (main) The 2nd argument to openzlog has been removed.

2004-12-03 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_main.c: (sighup) Remove spurious terminating message.
	  (sigint) Use zlog_notice for termination message.
	  (main) Issue a startup announcement using zlog_notice.

2004-11-25 Hasso Tepper <hasso at quagga.net>

	* ripng_main.c: Make group to run as configurable.

2004-10-26 Hasso Tepper <hasso at quagga.net>
